--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,15 @@
 <div class="container">
     {{ content}}
     {% for block in page.page_sections %}
-        {% assign template = block.template %}
-        {% case template %}
-        {% when 'highlights' %}
-            {% include blocks_{{template}}.html %}
-        {% when 'textarea' %}
-            {% include blocks_{{template}}.html %}            
-        {% endcase %}
-    {% endfor %}    
+    {% assign template = block.template %}
+    {% case template %}
+    {% when 'highlights' %}
+    {% include blocks_{{template}}.html %}
+    {% when 'textarea' %}
+    {% include blocks_{{template}}.html %}
+    {% when 'img-left' %}
+    {% include blocks_{{template}}.html %}
+    {% endcase %}
+    {% endfor %}
 </div>
 {% include footer.html %}
